[project]
name = "mlx-llm-turboquant-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31.1",
    "turboquant-mlx",
]

[project.scripts]
mlx-llm-turboquant-server = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
turboquant-mlx = { path = "vendor/turboquant-mlx", editable = true }
